feat: :bug: Bug fix
bug related with no dinamyc content using JS

none

--- a/html/weapons_page.html
+++ b/html/weapons_page.html
@@ -23,216 +23,9 @@
         </section>
     </header>
     <main id="weapons_total">
-        <section class="weapon_card">
-            <img src="../weapons/Benelli M2 Super 90 (TTI).png" alt="Benelli M2 Super 90 (TTI)" class="weapon_image">
-            <div>
-                <h2>Benelli M2 Super 90 (TTI)</h2>
-                <p>El Benelli M2 Super 90 es una escopeta semiautomática de acción por inercia, conocida por su
-                    fiabilidad y rapidez de disparo. Es utilizada por John Wick en varias escenas de combate.</p>
-            </div>
-        </section class="weapon_card">
-        <section class="weapon_card">
-            <img src="../weapons/Cinturon.png" alt="Cinturon" class="weapon_image">
-            <div>
-                <h2>Cinturón</h2>
-                <p>El cinturón de John Wick es un accesorio clave que no solo complementa su atuendo, sino que también
-                    sirve como un elemento práctico para llevar munición y otros equipos necesarios durante sus misiones.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Colt M1911A1.png" alt="Colt M1911A1" class="weapon_image">
-            <div>
-                <h2>Colt M1911A1</h2>
-                <p>El Colt M1911A1 es una pistola semiautomática de calibre .45 ACP, famosa por su potencia y precisión.
-                </p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/CZ P-10C.png" alt="CZ P-10C" class="weapon_image">
-            <div>
-                <h2>CZ P-10C</h2>
-                <p>La CZ P-10C es una pistola semiautomática de polímero, conocida por su ergonomía y precisión. Es una
-                    de las armas utilizadas por John Wick en sus enfrentamientos.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Daniel Defense MK18.png" alt="Daniel Defense MK18" class="weapon_image">
-            <div>
-                <h2>Daniel Defense MK18</h2>
-                <p>El Daniel Defense MK18 es un rifle de asalto compacto, conocido por su versatilidad y potencia de fuego.
-                    Es una de las armas más icónicas utilizadas por John Wick en sus combates.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Genesis Arms Gen-12.png" alt="Genesis Arms Gen-12" class="weapon_image">
-            <div>
-                <h2>Genesis Arms Gen-12</h2>
-                <p>El Genesis Arms Gen-12 es una escopeta semiautomática de 12 calibres, conocida por su diseño innovador
-                    y su capacidad para disparar una variedad de municiones. Es utilizada por John Wick en situaciones de
-                    combate intenso.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Glock 26.png" alt="Glock 26" class="weapon_image">
-            <div>
-                <h2>Glock 26</h2>
-                <p>La Glock 26 es una pistola compacta semiautomática, conocida por su fiabilidad y facilidad de uso. Es
-                    una de las armas que John Wick utiliza en sus misiones.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Glock 34.png" alt="Glock 34" class="weapon_image">
-            <div>
-                <h2>Glock 34</h2>
-                <p>La Glock 34 es una pistola semiautomática de competición, conocida por su precisión y capacidad de
-                    disparo rápido. Es utilizada por John Wick en varias escenas de acción.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Katana.png" alt="Katana" class="weapon_image">
-            <div>
-                <h2>Katana</h2>
-                <p>La katana es una espada japonesa tradicional, famosa por su filo afilado y su diseño elegante. En la
-                    saga de John Wick, es utilizada en combates cuerpo a cuerpo, destacando la habilidad del protagonista
-                    en el manejo de esta arma.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Kimber Warrior (1).png" alt="Kimber" class="weapon_image">
-            <div>
-                <h2>Kimber Warrior</h2>
-                <p>El Kimber Warrior es una pistola semiautomática de alta calidad, conocida por su precisión y
-                    durabilidad. Es una de las armas que John Wick utiliza en sus enfrentamientos, destacando su
-                    habilidad con armas de fuego.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Knife.png" alt="Knife" class="weapon_image">
-            <div>
-                <h2>Cuchillo</h2>
-                <p>El cuchillo es un arma blanca versátil y letal, utilizada por John Wick en combates cuerpo a cuerpo.
-                    Su habilidad con el cuchillo resalta su destreza y rapidez en situaciones de combate cercano.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/KRISS Vector.png" alt="KRISS Vector" class="weapon_image">
-            <div>
-                <h2>KRISS Vector</h2>
-                <p>El KRISS Vector es un subfusil innovador, conocido por su diseño único y su capacidad de disparo
-                    rápido. Es una de las armas más distintivas utilizadas por John Wick en sus enfrentamientos.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/KSG.png" alt="KSG" class="weapon_image">
-            <div>
-                <h2>KSG</h2>
-                <p>El KSG es una escopeta de acción por bombeo, conocida por su diseño compacto y su capacidad para
-                    disparar múltiples cartuchos. Es utilizada por John Wick en situaciones de combate intenso.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/M110.png" alt="M110" class="weapon_image">
-            <div>
-                <h2>M110</h2>
-                <p>El M110 es un rifle de francotirador semiautomático, conocido por su precisión y potencia de fuego.
-                    Es utilizado por John Wick en situaciones que requieren disparos a larga distancia.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/M4A1.png" alt="M4A1" class="weapon_image">
-            <div>
-                <h2>M4A1</h2>
-                <p>El M4A1 es un rifle de asalto ampliamente utilizado, conocido por su versatilidad y potencia. Es una
-                    de las armas más icónicas utilizadas por John Wick en sus combates.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/P30 L.png" alt="P30 L" class="weapon_image">
-            <div>
-                <h2>P30 L</h2>
-                <p>El P30 L es una pistola semiautomática de alta calidad, conocida por su ergonomía y precisión. Es
-                    utilizada por John Wick en varias escenas de acción, destacando su habilidad con armas de fuego.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Pit Viper by Taran Tactical.png" alt="Pit Viper by Taran Tactical" class="weapon_image">
-            <div>
-                <h2>Pit Viper by Taran Tactical</h2>
-                <p>La Pit Viper es una pistola personalizada por Taran Tactical, conocida por su diseño único y su
-                    rendimiento excepcional. Es utilizada por John Wick en situaciones de combate intenso.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/Remington 870.png" alt="Remington 870" class="weapon_image">
-            <div>
-                <h2>Remington 870</h2>
-                <p>La Remington 870 es una escopeta de acción por bombeo, conocida por su fiabilidad y potencia de fuego.
-                    Es una de las armas utilizadas por John Wick en sus enfrentamientos, destacando su habilidad con
-                    escopetas.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/SIG MPX Carbine.png" alt="SIG MPX Carbine" class="weapon_image">
-            <div>
-                <h2>SIG MPX Carbine</h2>
-                <p>El SIG MPX Carbine es un subfusil semiautomático, conocido por su diseño modular y su capacidad de
-                    disparo rápido. Es una de las armas más versátiles utilizadas por John Wick en sus combates.</p>
-            </div>
-        </section>
-        <section class="weapon_card"> 
-            <img src="../weapons/SIG MPX.png" alt="SIG MPX" class="weapon_image">
-            <div>
-                <h2>SIG MPX</h2>
-                <p>El SIG MPX es un subfusil semiautomático, conocido por su diseño compacto y su capacidad de disparo
-                    rápido. Es utilizado por John Wick en varias escenas de acción, destacando su habilidad con armas de
-                    fuego.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/SIG-Sauer P320.png" alt="SIG-Sauer P320" class="weapon_image">
-            <div>
-                <h2>SIG-Sauer P320</h2>
-                <p>La SIG-Sauer P320 es una pistola semiautomática de polímero, conocida por su modularidad y
-                    versatilidad. Es una de las armas utilizadas por John Wick en sus enfrentamientos, destacando su
-                    habilidad con armas de fuego.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/SIG-Sauer P365.png" alt="SIG-Sauer P365" class="weapon_image">
-            <div>
-                <h2>SIG-Sauer P365</h2>
-                <p>La SIG-Sauer P365 es una pistola semiautomática compacta, conocida por su capacidad de llevar una
-                    gran cantidad de munición en un tamaño reducido. Es utilizada por John Wick en varias escenas de
-                    acción, destacando su habilidad con armas de fuego.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/SR-16.png" alt="SR-16" class="weapon_image">
-            <div>
-                <h2>SR-16</h2>
-                <p>El SR-16 es un rifle de asalto semiautomático, conocido por su fiabilidad y precisión. Es una de las
-                    armas utilizadas por John Wick en sus enfrentamientos, destacando su habilidad con rifles de asalto.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/STI 2011 Combat Master (TTI).png" alt="STI 2011 Combat Master (TTI)" class="weapon_image">
-            <div>
-                <h2>STI 2011 Combat Master (TTI)</h2>
-                <p>El STI 2011 Combat Master es una pistola semiautomática de alta gama, conocida por su precisión y
-                    rendimiento excepcional. Es utilizada por John Wick en situaciones de combate intenso, destacando su
-                    habilidad con armas de fuego personalizadas.</p>
-            </div>
-        </section>
-        <section class="weapon_card">
-            <img src="../weapons/TTI TR-1 Ultralight.png" alt="TTI TR-1 Ultralight" class="weapon_image">
-            <div>
-                <h2>TTI TR-1 Ultralight</h2>
-                <p>El TTI TR-1 Ultralight es un rifle de asalto personalizado, conocido por su ligereza y precisión. Es
-                    una de las armas utilizadas por John Wick en sus enfrentamientos, destacando su habilidad con rifles
-                    de asalto personalizados.</p>
-            </div>
-        </section>
+        <weapon-easy-element></weapon-easy-element>
     </main>
+    <script type="module" src="../JavaScript/weapons.js"></script>
 </body>
 
 </html>
