feat: :sparkles: New functionality
Functionality created succesfully and applied to movie_info page

none

--- a/html/movie_info.html
+++ b/html/movie_info.html
@@ -12,12 +12,10 @@
     </header>
     <main>
         <section class="general_character">
-            <div class="sectionDiv_info_character">
-                <img src="../posters/Poster_JW1.png" alt="JohnWick 1" class="movie_image">
-            </div>
             <div class="Info_movie">
             </div>
         </section>
+        <script type="module" src="../JavaScript/APImovie_info.js"></script>
     </main>
 </body>
 </html>
