style: :art: style improved
alignement, font and style improved

none

--- a/html/movie_info.html
+++ b/html/movie_info.html
@@ -6,14 +6,18 @@
     <title>Peliculas info</title>
     <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
-<body>
+<body class="fondo_negro">
     <header>
         <a href="./movies_page.html"><img src="../icons/left-arrow.png" alt="boton_back" class="button_back"></a>
     </header>
     <main>
-        <section class="general_character">
-            <div class="Info_movie">
+        <section class="general_movie">
+            <div class="performance_movie">
+
             </div>
+            <section id="description_movie">
+
+            </section>
         </section>
         <script type="module" src="../JavaScript/APImovie_info.js"></script>
     </main>
