feat: :zap: Final details
final details

none

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="rain-container"></div>
             <div class="hero-content">
                 <span id="main_phrase">People keep asking if I'm back... Yeah, I'm thinking I'm back</span>
-                <button id="main_bottom">Conoce la historia</button>
+                <a href="./html/history_page.html"><button id="main_bottom">Conoce la historia</button></a>
             </div>
         </div>
     </main>
